# rust-cuda-example

./: Cargo.toml  NOTICE  README.md  build.rs
build-kernel/: Cargo.toml
build-kernel/src/: lib.rs
examples/: Cargo.toml
examples/src/: main.rs  vector_add.rs  zkm_trace.rs
kernels/: Cargo.toml  build.rs
kernels/cpp/: extern.cpp
kernels/cuda/: cuda.h  vec_add.h  vec_add_v1.cu  vec_add_v2.cu  vec_add_v3.cu
kernels/include/: kb31_t.hpp  sys.hpp  zkm-core-machine-sys-cbindgen.hpp
kernels/kernels/: add_sub.cu  add_sub_chip.cu  vec_add.cu  vec_add_v1.cu  vec_add_v2.cu  vec_add_v3.cu
kernels/src/: buffer.rs  lib.rs  perf.rs  tracker.rs
src/: main.rs  vec_add.cu
